Added overview map.

--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,7 @@
     <link href="css/vendor/bootstrap-slider.css" rel="stylesheet" media="screen">
     <link href="css/vendor/leaflet.css" rel="stylesheet"/>
     <link href="css/vendor/leaflet.draw.css" rel="stylesheet">
+    <link href="css/vendor/Control.MiniMap.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
 </head>
@@ -355,8 +356,9 @@
     </script>
 
     <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/vendor/leaflet-src.js"></script>
+    <script src="js/vendor/leaflet.0.7.2.js"></script>
     <script src="js/vendor/leaflet.draw.js"></script>
+    <script src="js/vendor/Control.MiniMap.js"></script>
     <script src="js/vendor/handlebars.js"></script>
     <script src="js/vendor/underscore.js"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
