Implemented find address.

--- a/static/index.html
+++ b/static/index.html
@@ -217,6 +217,17 @@
       </div>
     </script>
 
+    <script type="text/x-handlebars-template" id="find-address-template">
+      <div class="find-address-container">
+        <h4>Find Address</h4>
+        <div class="input-group">
+          <input type="text" class="form-control" id="find-address-search" placeholder="Search by address">
+          <span class="input-group-btn">
+            <button class="btn btn-primary" id="find-address-go" type="button">Go!</button>
+          </span>
+        </div>
+      </div>
+    </script>
 
     <script type="text/x-handlebars-template" id="parcel-details-template">
       <div class="parcel-details-container">
