Add back in remove factor, slider counts

--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,7 @@
                 <span class="glyphicon glyphicon-list"></span>
                 <div class="tool-title">Legend</div>
             </div>
-            <div class="tool left">
+            <div class="tool left tool-region">
                 <span class="glyphicon glyphicon-globe"></span>
                 <div class="tool-title">View Region</div>
             </div>
@@ -199,10 +199,10 @@
         <div class="parcel-details-body">
           <table class="table table-hover">
             <tr>
-              <td><a href="http://gis.ashevillenc.gov/mapasheville/developmentmapper/default.htm?CMD=searchbyPIN&VALUE={{pinnum}}" target="_blank">Develoment Mapper</a></td> <td></td>
+              <td colspan="2"><a href="http://gis.ashevillenc.gov/mapasheville/developmentmapper/default.htm?CMD=searchbyPIN&VALUE={{pinnum}}" target="_blank">Develoment Mapper</a></td>
             </tr>
             <tr>
-              <td><a href="http://gis.ashevillenc.gov/mapasheville/crimemapper/default.htm?CMD=searchbyPIN&VALUE={{pinnum}}" target="_blank">Crime Mapper</a></td> <td></td>
+              <td colspan="2"><a href="http://gis.ashevillenc.gov/mapasheville/crimemapper/default.htm?CMD=searchbyPIN&VALUE={{pinnum}}" target="_blank">Crime Mapper</a></td>
             </tr>
             <tr>
               <td>Pin Num</td> <td>{{pinnum}}</td>
@@ -328,13 +328,13 @@
               <td>Improvement Value</td> <td>{{improvementvalue}}</td>
             </tr>
             <tr>
-              <td><a href="{{propcard}}" target="_blank">Property Card</a></td> <td></td>
+              <td colspan="2"><a href="{{propcard}}" target="_blank">Property Card</a></td>
             </tr>
             <tr>
-              <td><a href="{{deedurl}}" target="_blank">Deed URL</a></td> <td></td>
+              <td colspan="2"><a href="{{deedurl}}" target="_blank">Deed URL</a></td>
             </tr>
             <tr>
-              <td><a href="{{platurl}}" target="_blank">Plat URL</a></td> <td></td>
+              <td colspan="2"><a href="{{platurl}}" target="_blank">Plat URL</a></td>
             </tr>
           </table>
         </div>
