--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,7 @@
 <body>
     <header>
         <h1>Asheville North Carolina</h1>
+        <h2>Priority Places <small>MapAsheville</small></h2>
         <div id="toggle-sidebar" class="visible-xs btn btn-primary">
             <span class="glyphicon glyphicon-filter"></span>
         </div>
@@ -70,6 +71,103 @@
             <div class="arrow"></div>
             <div class="popover-content" id="legend-container">
                 <h4>Base Map Legend</h4>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="report-modal" tabindex="-1" role="dialog" aria-labelledby="report-modal" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Create a Report</h4>
+                </div>
+                <div class="modal-body">
+                    <form role="form">
+                        <div class="form-group">
+                            <label class="report-label" for="report-title"><span class="label-number">1.</span>Set a Report Title</label>
+                            <input type="text" class="form-control" id="report-title" placeholder="Priority Places Asheville - Sample Report">
+                        </div>
+                        <div class="form-group">
+                            <label class="report-label"><span class="label-number">2.</span>Select a Report Output Format</label>
+                            <div class="btn-group" data-toggle="buttons">
+                                <label class="btn btn-primary active">
+                                    <input type="radio" name="report-output-format" id="report-output-format-pdf" checked> PDF
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="report-output-format" id="report-output-format-excel"> Excel
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="report-label"><span class="label-number">3.</span>Choose your Study Area</label>
+                            <div class="btn-group" data-toggle="buttons">
+                                <label class="btn btn-primary active">
+                                    <input type="radio" name="report-study-area" id="report-study-area-census" checked> Census Tract
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="report-study-area" id="report-study-area-blockgroup"> Block Group
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="report-study-area" id="report-study-area-radius"> Radius
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="report-study-area" id="report-study-area-travel"> Travel Time
+                                </label>
+                            </div>
+                            <div id="report-study-area-radius-options" class="well hidden">
+                                <p><strong>Rings/Radii:</strong> Information for up to three overlapping rings that use your selected location as the center point. Each ring includes data of any inner ring.</p>
+                                <label class="checkbox-inline">
+                                    <input type="number" class="form-control input-sm report-study-area-radius-options-input" id="report-study-area-radius-1" value="1">
+                                </label>
+                                <label class="checkbox-inline">
+                                    <input type="checkbox" id="report-study-area-radius-2-toggle"> <input type="number" class="form-control input-sm report-study-area-radius-options-input" id="report-study-area-radius-2" value="3">
+                                </label>
+                                <label class="checkbox-inline">
+                                    <input type="checkbox" id="report-study-area-radius-3-toggle"> <input type="number" class="form-control input-sm report-study-area-radius-options-input" id="report-study-area-radius-3" value="5">
+                                </label>
+                            </div>
+                            <div id="report-study-area-traveltime-options" class="well hidden">
+                                <p><strong>Travel Time:</strong> Information for up to three overlapping drive time distances in minutes that use your selected location as the center point.</p>
+                                <label class="checkbox-inline">
+                                    <input type="number" class="form-control input-sm report-study-area-traveltime-options-input" id="report-study-area-traveltime-1" value="3">
+                                </label>
+                                <label class="checkbox-inline">
+                                    <input type="checkbox" id="report-study-area-traveltime-2-toggle"> <input type="number" class="form-control input-sm report-study-area-traveltime-options-input" id="report-study-area-traveltime-2" value="5">
+                                </label>
+                                <label class="checkbox-inline">
+                                    <input type="checkbox" id="report-study-area-traveltime-3-toggle"> <input type="number" class="form-control input-sm report-study-area-traveltime-options-input" id="report-study-area-traveltime-3" value="7">
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="report-label"><span class="label-number">4.</span>Select a Report Type</label>
+                            <div class="report-type-list">
+                                <div class="list-group">
+                                    <a href="#" class="list-group-item">
+                                        <h4 class="list-group-item-heading">Demographic and Income Profile</h4>
+                                        <p class="list-group-item-text">Summarizes Census 2000, current-year estimates, and five-year forecasts of household data to reveal trends in demographics and income.</p>
+                                    </a>
+                                    <a href="#" class="list-group-item">
+                                        <h4 class="list-group-item-heading">Census 2000 Summary Profile</h4>
+                                        <p class="list-group-item-text">...</p>
+                                    </a>
+                                    <a href="#" class="list-group-item">
+                                        <h4 class="list-group-item-heading">Retail Goods and Service Expenditure</h4>
+                                        <p class="list-group-item-text">...</p>
+                                    </a>
+                                    <a href="#" class="list-group-item">
+                                        <h4 class="list-group-item-heading">Housing Profile</h4>
+                                        <p class="list-group-item-text">...</p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" disabled="disabled">Generate Report</button>
+                </div>
             </div>
         </div>
     </div>
@@ -194,6 +292,9 @@
         </div>
         <div class="parcel-details-body">
           <table class="table table-hover">
+            <tr>
+              <td colspan="2"><a class="btn btn-success btn-xs btn-block" data-toggle="modal" data-target="#report-modal">Create a Report</a></td>
+            </tr>
             <tr>
               <td colspan="2"><a href="http://gis.ashevillenc.gov/mapasheville/developmentmapper/default.htm?CMD=searchbyPIN&VALUE={{pinnum}}" target="_blank">Develoment Mapper</a></td>
             </tr>
