Update check/radio button graphics

--- a/static/index.html
+++ b/static/index.html
@@ -57,7 +57,7 @@
             <div id="sidebar">
                 <div class="scenarios">
                     <input id="all-radio" name="css-sidebar-radio" class="css-radio" type="radio" checked />
-                    <label for="all-radio" class="css-label"></label><span>Combined Factors <small>View the composite of all factors below.</small></span>
+                    <label for="all-radio" class="css-label"></label><span>All Combined Factors <small>View the composite of all factors below.</small></span>
                 </div>
                 <div class="factors"></div>
                 <div class="all-factors hide-panel"></div>				
